tests/machine/x/python/in_operator_extended.py
# Generated by Mochi compiler v0.10.26 on 2025-07-16T15:49:01Z
from __future__ import annotations
import dataclasses


@dataclasses.dataclass
class Auto1:
    a: int

    def __getitem__(self, key):
        return getattr(self, key)


xs = [1, 2, 3]
ys = [x for x in xs if x % 2 == 1]
print(str(1 in ys).lower())
print(str(2 in ys).lower())
m = Auto1(a=1)
print(str("a" in m).lower())
print(str("b" in m).lower())
s = "hello"
print(str("ell" in s).lower())
print(str("foo" in s).lower())
